crates/data_flow/re_importer/src/importer_mcap/tests/snapshots/ros_nav_sat_fix.snap
---
source: crates/data_flow/re_importer/src/importer_mcap/tests/util.rs
expression: snapshot
input_file: crates/data_flow/re_importer/src/importer_mcap/tests/assets/ros_nav_sat_fix.mcap
---
┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ METADATA:                                                                                                                                                                                                                          │
│ * entity_path: /gps/fix                                                                                                                                                                                                            │
│ * id: [**REDACTED**]                                                                                                                                                                                                               │
│ * version: [**REDACTED**]                                                                                                                                                                                                          │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ┌────────────────────────────────┬──────────────────────────────┬────────────────────────────────┬────────────────────────────┬────────────────────────────────┬────────────────────────────────┬────────────────────────────────┐ │
│ │ RowId                          ┆ message_log_time             ┆ message_publish_time           ┆ ros2_timestamp             ┆ CoordinateFrame:frame          ┆ GeoPoints:positions            ┆ altitude                       │ │
│ │ ---                            ┆ ---                          ┆ ---                            ┆ ---                        ┆ ---                            ┆ ---                            ┆ ---                            │ │
│ │ type: non-null                 ┆ type: Timestamp(ns)          ┆ type: Timestamp(ns)            ┆ type: Timestamp(ns)        ┆ type: List(Utf8)               ┆ type: List(FixedSizeList(2 x   ┆ type: List(Float64)            │ │
│ │ FixedSizeBinary(16)            ┆ index_name: message_log_time ┆ index_name:                    ┆ index_name: ros2_timestamp ┆ archetype: CoordinateFrame     ┆ non-null Float64))             ┆ archetype:                     │ │
│ │ ARROW:extension:metadata:      ┆ is_sorted: true              ┆ message_publish_time           ┆ is_sorted: true            ┆ component:                     ┆ archetype: GeoPoints           ┆ sensor_msgs.msg.NavSatFix      │ │
│ │ {"namespace":"row"}            ┆ kind: index                  ┆ is_sorted: true                ┆ kind: index                ┆ CoordinateFrame:frame          ┆ component: GeoPoints:positions ┆ component: altitude            │ │
│ │ ARROW:extension:name: TUID     ┆                              ┆ kind: index                    ┆                            ┆ component_type:                ┆ component_type: LatLon         ┆ kind: data                     │ │
│ │ is_sorted: true                ┆                              ┆                                ┆                            ┆ TransformFrameId               ┆ kind: data                     ┆                                │ │
│ │ kind: control                  ┆                              ┆                                ┆                            ┆ kind: data                     ┆                                ┆                                │ │
│ ╞════════════════════════════════╪══════════════════════════════╪════════════════════════════════╪════════════════════════════╪════════════════════════════════╪════════════════════════════════╪════════════════════════════════╡ │
│ │ row_[**REDACTED**]             ┆ 2026-09-03T09:56:01.408073   ┆ 2026-09-03T09:56:01.408073     ┆ 2026-09-03T09:56:01.408073 ┆ [gps_antenna]                  ┆ [[59.3192, 18.0738]]           ┆ [8.0]                          │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]             ┆ 2026-09-03T09:56:01.508073   ┆ 2026-09-03T09:56:01.508073     ┆ 2026-09-03T09:56:01.508073 ┆ [gps_antenna]                  ┆ [[59.3191, 18.0746]]           ┆ [11.5]                         │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]             ┆ 2026-09-03T09:56:01.608073   ┆ 2026-09-03T09:56:01.608073     ┆ 2026-09-03T09:56:01.608073 ┆ [gps_antenna]                  ┆ [[59.3191, 18.0754]]           ┆ [6.0]                          │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]             ┆ 2026-09-03T09:56:01.708073   ┆ 2026-09-03T09:56:01.708073     ┆ 2026-09-03T09:56:01.708073 ┆ [gps_antenna]                  ┆ [[59.319, 18.0762]]            ┆ [14.0]                         │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]             ┆ 2026-09-03T09:56:01.808073   ┆ 2026-09-03T09:56:01.808073     ┆ 2026-09-03T09:56:01.808073 ┆ [gps_antenna]                  ┆ [[59.3189, 18.077]]            ┆ [9.5]                          │ │
│ └────────────────────────────────┴──────────────────────────────┴────────────────────────────────┴────────────────────────────┴────────────────────────────────┴────────────────────────────────┴────────────────────────────────┘ │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
