crates/data_flow/re_importer/src/importer_mcap/tests/snapshots/ros_pose_stamped.snap
---
source: crates/data_flow/re_importer/src/importer_mcap/tests/util.rs
expression: snapshot
input_file: crates/data_flow/re_importer/src/importer_mcap/tests/assets/ros_pose_stamped.mcap
---
┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ METADATA:                                                                                                                                                                                                                              │
│ * entity_path: /pose_stamped                                                                                                                                                                                                           │
│ * id: [**REDACTED**]                                                                                                                                                                                                                   │
│ * version: [**REDACTED**]                                                                                                                                                                                                              │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ┌────────────────────────────────┬───────────────────────────────┬────────────────────────────────┬───────────────────────────────┬────────────────────────────────┬────────────────────────────────┬────────────────────────────────┐ │
│ │ RowId                          ┆ message_log_time              ┆ message_publish_time           ┆ ros2_timestamp                ┆ CoordinateFrame:frame          ┆ InstancePoses3D:quaternions    ┆ InstancePoses3D:translations   │ │
│ │ ---                            ┆ ---                           ┆ ---                            ┆ ---                           ┆ ---                            ┆ ---                            ┆ ---                            │ │
│ │ type: non-null                 ┆ type: Timestamp(ns)           ┆ type: Timestamp(ns)            ┆ type: Timestamp(ns)           ┆ type: List(Utf8)               ┆ type: List(FixedSizeList(4 x   ┆ type: List(FixedSizeList(3 x   │ │
│ │ FixedSizeBinary(16)            ┆ index_name: message_log_time  ┆ index_name:                    ┆ index_name: ros2_timestamp    ┆ archetype: CoordinateFrame     ┆ non-null Float32))             ┆ non-null Float32))             │ │
│ │ ARROW:extension:metadata:      ┆ is_sorted: true               ┆ message_publish_time           ┆ is_sorted: true               ┆ component:                     ┆ archetype: InstancePoses3D     ┆ archetype: InstancePoses3D     │ │
│ │ {"namespace":"row"}            ┆ kind: index                   ┆ is_sorted: true                ┆ kind: index                   ┆ CoordinateFrame:frame          ┆ component:                     ┆ component:                     │ │
│ │ ARROW:extension:name: TUID     ┆                               ┆ kind: index                    ┆                               ┆ component_type:                ┆ InstancePoses3D:quaternions    ┆ InstancePoses3D:translations   │ │
│ │ is_sorted: true                ┆                               ┆                                ┆                               ┆ TransformFrameId               ┆ component_type: RotationQuat   ┆ component_type: Translation3D  │ │
│ │ kind: control                  ┆                               ┆                                ┆                               ┆ kind: data                     ┆ kind: data                     ┆ kind: data                     │ │
│ ╞════════════════════════════════╪═══════════════════════════════╪════════════════════════════════╪═══════════════════════════════╪════════════════════════════════╪════════════════════════════════╪════════════════════════════════╡ │
│ │ row_[**REDACTED**]             ┆ 2026-05-13T19:44:56.104003072 ┆ 2026-05-13T19:44:56.104003072  ┆ 2026-05-13T19:44:56.104003072 ┆ [map]                          ┆ [[0.0, 0.0, 0.0, 1.0]]         ┆ [[0.0, 0.0, 0.0]]              │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]             ┆ 2026-05-13T19:44:56.204003072 ┆ 2026-05-13T19:44:56.204003072  ┆ 2026-05-13T19:44:56.204003072 ┆ [map]                          ┆ [[0.0, 0.0, 0.38268343,        ┆ [[1.0, 0.5, 0.0]]              │ │
│ │                                ┆                               ┆                                ┆                               ┆                                ┆ 0.9238795]]                    ┆                                │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]             ┆ 2026-05-13T19:44:56.304003328 ┆ 2026-05-13T19:44:56.304003328  ┆ 2026-05-13T19:44:56.304003328 ┆ [map]                          ┆ [[0.0, 0.0, 0.70710677,        ┆ [[2.0, 1.0, 0.0]]              │ │
│ │                                ┆                               ┆                                ┆                               ┆                                ┆ 0.70710677]]                   ┆                                │ │
│ └────────────────────────────────┴───────────────────────────────┴────────────────────────────────┴───────────────────────────────┴────────────────────────────────┴────────────────────────────────┴────────────────────────────────┘ │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
